--- a/src/css/header.css
+++ b/src/css/header.css
@@ -50,11 +50,28 @@
     font-size: 20px;
 }
 
+.dropdown a {
+    padding-left: 10px;
+    padding-top: 5px;
+}
+
 
 /* -----mobile/tablet---------------- */
 @media only screen and (max-width: 991px) { 
     .Box-search {
         width: 90%;
         margin-top: 20px;
+    }
+}
+
+@media only screen and (min-width: 820px) and (max-width: 1024px) {
+    .card-img-top {
+        height: 200px;
+    }
+    .nav-item a {
+        font-size: 13px;
+    }
+    .dropdown a {
+        padding-top: 0px;
     }
 }
