--- a/src/css/listbao.css
+++ b/src/css/listbao.css
@@ -7,9 +7,9 @@
     position: fixed;
     top: 30%;
     left: 50%;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc !important;
     border-radius: 10px;
-    padding: 30px;
+    padding: 10px;
     transform: translate(-50%, -50%);
     width: 350px;
     z-index: 1000;
