--- a/src/css/login.css
+++ b/src/css/login.css
@@ -81,7 +81,7 @@
 
 .wrapper .btn {
     box-shadow: none;
-    width: 80%;
+    width: 100%;
     height: 40px;
     background-color: #03A9F4;
     color: #fff;
@@ -106,6 +106,17 @@
 .repass{
     font-size: 15px;
     cursor: pointer;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active  {
+  transition: background-color 5000s;
+  -webkit-text-fill-color: transparent !important;
+  -webkit-text-fill-color: #fff !important;
+  -webkit-background-clip: text;
+  caret-color: white;
 }
 
 @media(max-width: 480px) {
